--- a/src/components/widget/NavMenuPanel.astro
+++ b/src/components/widget/NavMenuPanel.astro
@@ -1,14 +1,14 @@
-
-import { Icon } from "astro-icon/components";
-import { type NavBarLink } from "../../types/config";
-import { url } from "../../utils/url-utils";
+---
+import {NavBarLink} from "../../types/config";
+import {Icon} from "astro-icon/components";
+import {url} from "../../utils/url-utils";
 
 interface Props {
-	links: NavBarLink[];
+    links: NavBarLink[],
 }
 
 const links = Astro.props.links;
-
+---
 <div id="nav-menu-panel" class:list={["float-panel float-panel-closed absolute transition-all fixed right-4 px-2 py-2"]}>
     {links.map((link) => (
         <a href={link.external ? link.url : url(link.url)} class="group flex justify-between items-center py-2 pl-3 pr-1 rounded-lg gap-8
@@ -20,11 +20,11 @@ const links = Astro.props.links;
                 {link.name}
             </div>
             {!link.external && <Icon name="material-symbols:chevron-right-rounded"
-                  class="transition text-[1.25rem] text-[var(--primary)]"
+                  class="transition text-[var(--primary)]" size="20"
             >
             </Icon>}
             {link.external && <Icon name="fa6-solid:arrow-up-right-from-square"
-                  class="transition text-[0.75rem] text-black/25 dark:text-white/25 -translate-x-1"
+                  class="transition text-black/25 dark:text-white/25 -translate-x-1" size="12"
             >
             </Icon>}
         </a>
