--- a/src/components/widget/NavMenuPanel.astro
+++ b/src/components/widget/NavMenuPanel.astro
@@ -1,10 +1,10 @@
 ---
-import {NavBarLink} from "../../types/config";
-import {Icon} from "astro-icon/components";
-import {url} from "../../utils/url-utils";
+import { Icon } from "astro-icon/components";
+import { type NavBarLink } from "../../types/config";
+import { url } from "../../utils/url-utils";
 
 interface Props {
-    links: NavBarLink[],
+	links: NavBarLink[];
 }
 
 const links = Astro.props.links;
@@ -20,11 +20,11 @@ const links = Astro.props.links;
                 {link.name}
             </div>
             {!link.external && <Icon name="material-symbols:chevron-right-rounded"
-                  class="transition text-[var(--primary)]" size="20"
+                  class="transition text-[1.25rem] text-[var(--primary)]"
             >
             </Icon>}
             {link.external && <Icon name="fa6-solid:arrow-up-right-from-square"
-                  class="transition text-black/25 dark:text-white/25 -translate-x-1" size="12"
+                  class="transition text-[0.75rem] text-black/25 dark:text-white/25 -translate-x-1"
             >
             </Icon>}
         </a>
